<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="project.maheshpujala.com.mergevideos.MainActivity">

    <TabHost
        android:id="@+id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/local"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/addVideo1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_video_one"
                        android:layout_margin="5dp"/>
                    <Button
                        android:id="@+id/addVideo2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_video_two"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/append"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/append_both_videos"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/showMergedVideo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/show_merged_videos"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="10dp"/>

                    <VideoView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/videoView"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cloud"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/addFirstVideoCloud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_correct_resolution_video"
                        android:layout_margin="5dp"/>

                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="@string/second_video_is_fetched_from_amazon_s3"/>
                    <Button
                        android:id="@+id/appendVideoCloud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/append_both_videos"
                        android:layout_margin="5dp"/>

                    <Button
                        android:id="@+id/showMergedVideoCloud"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/show_merged_videos"
                        android:textColor="@android:color/white"
                        android:layout_marginTop="10dp"/>

                    <VideoView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/videoViewCloud"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ProgressText"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@android:color/darker_gray"
            android:padding="5dp"
            android:visibility="gone"
            android:textColor="@android:color/black"
           />
</FrameLayout>
